# Number-theoretic-methods-in-cryptography

./: .gitignore  CMakeLists.txt  README.md  test.cpp
big_numbers/: CMakeLIsts.txt  big_number.cpp  big_number.hpp
big_numbers_algorithms/: CMakeLIsts.txt  bn_aloririthms.cpp
boosted_algorithms/: CmakeLists.txt  algo.hpp  main.cpp
old/: CMakeLists.txt
old/big_numbers/: big_number.cpp  big_number.hpp
old/big_numbers_algorithms/: bn_aloririthms.cpp  test.cpp
